Revert "Add permission to list ecs tasks to policy statements"
This reverts commit 1a6d210d555cf331327e2a2196e82d1eaad2b46d.